# ARC_Saga

./: .coverage  .cursorignore  .cursorrules  .gitignore  Makefile  README.md  SYSTEM_MAP.md  audit_log.txt  audit_system.py  bandit-report.json  coverage.json  debug_langgraph_async.py  debug_langgraph_async_2.py  debug_output.txt  diagnose.py  diagnose_search.py  figma_design.json  fix_all_issues.py  fix_linting.py  fix_tests.py  mcp.json  mypy.ini  openmemory.md  pyproject.toml  pytest.ini  remove_unused_imports.py  requirements-dev.txt  requirements.txt  run_codex_gen.py  sagacodex_index.json  setup.py  test_failure.txt  test_output.txt  test_result.txt  test_results.txt  test_results_after_fixes.txt  test_server.py
.github/: copilot-instructions.md  dependabot.yml
.mypy_cache/: .gitignore
.saga/: lorebook.db  sagacodex_index.json  tasks.db
.tmp.driveupload/: 44586  44588  44590  44594  44596  44598  44600  44602  44604  44606  44608  44610  44612  44614  44616  44618  44620  44622  44624  44626  44628  44630  44634  44636  44638  44640  44644  44646  44648  44650  44652  44656  44660  44662  44664  44666  44670  44672  44674  44676  (+128 more)
DEVLOG/: TEMPLATE_devlog.md  devlog_n8n-perplexity-integration_phase1_setup_1.md
SAGA_CODE_PROMPTS_INSTRUCTION_HISTORY/: COMPONENT_3_NOTES.md  COMPONENT_3_READY_DEPLOY.md  COMPONENT_3_VALIDATION_CHECKLIST.md  CURSOR_INSTRUCTION_COMPONENT_2.md  Comp_3_guide.txt  PHASE_2_3_CRITICAL_NEXT_ACTIONS.md  PHASE_2_3_STATUS_AND_NEXT_STEPS.md  PHASE_2_4_COMPONENT_2_IMPLEMENTATION_GUIDE_REVISED.md  PHASE_2_4_EXECUTIVE_SUMMARY.md  PHASE_2_4_IMPLEMENTATION_ROADMAP.md  PHASE_2_4_PRE_IMPLEMENTATION_VERIFICATION.md  PROMPT_PHASE_2_3_STEP_1_REVISED.md  SAGA_TRUST_LAYER_ARCHITECTURE.md  STEP_1_EXECUTION_PLAN.md  component_4_cost_optimizer_guide.md
arc_saga/: __init__.py  error_instrumentation.py  logging_config.py  observability.py  validators.py
arc_saga.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmarks/: test_mimiry_arbitration.py  test_taskgraph_scaling.py
design_copy/: canvas.fig  meta.json
docs/: AGENT_ONBOARDING.md  CLAUDE_SAGA_LIBRARY_TOOLS.txt  Constitution_v1.md  DEVELOPER_PLAYBOOK.md  LoreBook_Patterns_v1.md  Onboarding_Flow_v1.md  PHASE_1_Foundation.md  PHASE_2_1_Orchestrator_Logs.md  PHASE_2_4_COMPONENT_1_COMPLETE.md  PHASE_2_4_COMPONENT_2_COMPLETE.md  PHASE_2_Orchestrator.md  PHASE_3_Memory_systems.md  PHASE_4_MCP_Integration.md  PHASE_5_Desktop_UI.md  PHASE_6_Team_Collaboration.md  ROADMAP.md  SESSION_SUMMARY.md  SagaCodex_Index_v1.md  arc_saga_master_index.md  architecture.rst  benchmarks.md  conf.py  cursorrules-master-reference.md  decision_catalog.md  deployment_guide.md  error_catalog.md  feature_ideas_backlog.md  testing.rst  (+3 more)
(+8732 files in other folders)
